// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/FilePreview should match snapshot 1`] = `
<div
  className="file-preview__container"
>
  <div
    className="file-preview post-image__column"
    key="file_id_1"
  >
    <div
      className="post-image__thumbnail"
    >
      <div
        className="post-image normal"
        style={
          Object {
            "backgroundImage": "url(/api/v4/files/file_id_1/thumbnail)",
            "backgroundSize": "cover",
          }
        }
      />
    </div>
    <div
      className="post-image__details"
    >
      <FilenameOverlay
        canDownload={false}
        compactDisplay={false}
        fileInfo={
          Object {
            "create_at": "1",
            "extension": "jpg",
            "height": 100,
            "id": "file_id_1",
            "width": 100,
          }
        }
        handleImageClick={null}
        index={0}
      />
      <div>
        <a
          className="file-preview__remove"
          onClick={[Function]}
        >
          <i
            className="fa fa-remove"
          />
        </a>
        <span
          className="post-image__type"
        >
          JPG
        </span>
        <span
          className="post-image__size"
        >
          undefinedB
        </span>
      </div>
    </div>
  </div>
  <div
    className="file-preview"
    data-client-id="clientID_1"
    key="clientID_1"
  >
    <img
      className="spinner"
      src={null}
    />
    <a
      className="file-preview__remove"
      onClick={[Function]}
    >
      <i
        className="fa fa-remove"
      />
    </a>
  </div>
</div>
`;

exports[`component/FilePreview should match snapshot when props are changed 1`] = `
<div
  className="file-preview__container"
>
  <div
    className="file-preview post-image__column"
    key="file_id_1"
  >
    <div
      className="post-image__thumbnail"
    >
      <div
        className="post-image normal"
        style={
          Object {
            "backgroundImage": "url(/api/v4/files/file_id_1/thumbnail)",
            "backgroundSize": "cover",
          }
        }
      />
    </div>
    <div
      className="post-image__details"
    >
      <FilenameOverlay
        canDownload={false}
        compactDisplay={false}
        fileInfo={
          Object {
            "create_at": "1",
            "extension": "jpg",
            "height": 100,
            "id": "file_id_1",
            "width": 100,
          }
        }
        handleImageClick={null}
        index={0}
      />
      <div>
        <a
          className="file-preview__remove"
          onClick={[Function]}
        >
          <i
            className="fa fa-remove"
          />
        </a>
        <span
          className="post-image__type"
        >
          JPG
        </span>
        <span
          className="post-image__size"
        >
          undefinedB
        </span>
      </div>
    </div>
  </div>
  <div
    className="file-preview"
    data-client-id="clientID_1"
    key="clientID_1"
  >
    <img
      className="spinner"
      src={null}
    />
    <a
      className="file-preview__remove"
      onClick={[Function]}
    >
      <i
        className="fa fa-remove"
      />
    </a>
  </div>
</div>
`;

exports[`component/FilePreview should match snapshot when props are changed 2`] = `
<div
  className="file-preview__container"
>
  <div
    className="file-preview post-image__column"
    key="file_id_1"
  >
    <div
      className="post-image__thumbnail"
    >
      <div
        className="post-image normal"
        style={
          Object {
            "backgroundImage": "url(/api/v4/files/file_id_1/thumbnail)",
            "backgroundSize": "cover",
          }
        }
      />
    </div>
    <div
      className="post-image__details"
    >
      <FilenameOverlay
        canDownload={false}
        compactDisplay={false}
        fileInfo={
          Object {
            "create_at": "1",
            "extension": "jpg",
            "height": 100,
            "id": "file_id_1",
            "width": 100,
          }
        }
        handleImageClick={null}
        index={0}
      />
      <div>
        <a
          className="file-preview__remove"
          onClick={[Function]}
        >
          <i
            className="fa fa-remove"
          />
        </a>
        <span
          className="post-image__type"
        >
          JPG
        </span>
        <span
          className="post-image__size"
        >
          undefinedB
        </span>
      </div>
    </div>
  </div>
  <div
    className="file-preview post-image__column"
    key="file_id_2"
  >
    <div
      className="post-image__thumbnail"
    >
      <div
        className="post-image normal"
        style={
          Object {
            "backgroundImage": "url(/api/v4/files/file_id_2/thumbnail)",
            "backgroundSize": "cover",
          }
        }
      />
    </div>
    <div
      className="post-image__details"
    >
      <FilenameOverlay
        canDownload={false}
        compactDisplay={false}
        fileInfo={
          Object {
            "create_at": "2",
            "extension": "jpg",
            "height": 100,
            "id": "file_id_2",
            "width": 100,
          }
        }
        handleImageClick={null}
        index={1}
      />
      <div>
        <a
          className="file-preview__remove"
          onClick={[Function]}
        >
          <i
            className="fa fa-remove"
          />
        </a>
        <span
          className="post-image__type"
        >
          JPG
        </span>
        <span
          className="post-image__size"
        >
          undefinedB
        </span>
      </div>
    </div>
  </div>
</div>
`;
